// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapBanner renders correctly with exchange link 1`] = `
<SwapBanner__Wrapper>
  <SwapBanner__Column>
    <SwapBanner__LargeText>
      <FormattedMessage
        defaultMessage="Swap Your Crypto"
        id="scenes.home.swapbanner.swap_your_crypto"
        values={Object {}}
      />
    </SwapBanner__LargeText>
    <SwapBanner__MediumText>
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="scenes.home.swapbanner.trading_your_crypto"
        values={Object {}}
      />
    </SwapBanner__MediumText>
  </SwapBanner__Column>
  <SwapBanner__Column
    hiddenOnMobile={true}
  >
    <SwapBanner__BackgroundImage
      name="swap-dashboard-right"
    />
  </SwapBanner__Column>
  <SwapBanner__Column>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/swap"
    >
      <SwapBanner__GetStartedButton>
        <FormattedMessage
          defaultMessage="Make Swap"
          id="scenes.home.swapbanner.faster.makeswap"
          values={Object {}}
        />
      </SwapBanner__GetStartedButton>
    </LinkContainer>
  </SwapBanner__Column>
</SwapBanner__Wrapper>
`;

exports[`SwapBanner renders correctly with getstarted button 1`] = `
<SwapBanner__Wrapper>
  <SwapBanner__Column>
    <SwapBanner__LargeText>
      <FormattedMessage
        defaultMessage="Swap Your Crypto"
        id="scenes.home.swapbanner.swap_your_crypto"
        values={Object {}}
      />
    </SwapBanner__LargeText>
    <SwapBanner__MediumText>
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="scenes.home.swapbanner.trading_your_crypto"
        values={Object {}}
      />
    </SwapBanner__MediumText>
  </SwapBanner__Column>
  <SwapBanner__Column
    hiddenOnMobile={true}
  >
    <SwapBanner__BackgroundImage
      name="swap-dashboard-right"
    />
  </SwapBanner__Column>
  <SwapBanner__Column>
    <SwapBanner__GetStartedButton>
      <FormattedMessage
        defaultMessage="Get Started"
        id="scenes.home.swapbanner.faster.started"
        values={Object {}}
      />
    </SwapBanner__GetStartedButton>
  </SwapBanner__Column>
</SwapBanner__Wrapper>
`;

exports[`SwapBanner renders null w/o showBanner 1`] = `""`;
